src/objects/Listing_Image__c.object
<CustomObject>
    <fields>
        <fullName>Image_Description__c</fullName>
        <label>Image Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>URL of the image</description>
        <inlineHelpText>The URL (web address) for the image</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <inlineHelpText>The listing this image is for.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Images</relationshipLabel>
        <relationshipName>Listing_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Listing Image</label>
    <nameField>
        <label>Listing Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listing Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>